--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ SECRET=Not that secret !
 
 # Internet facing URL where your bot can be reached
 # note that botkit automatically appends the relative path "/ciscospark/receive"
-PUBLIC_URL=https://my-peppinauz-bot-test.herokuapp.com
+PUBLIC_URL=https://my-peppinauz-spark-bot-test.herokuapp.com
 
 # Name used to create the webhook to register your bot against Cisco Spark
 # Defaults to 'built with BotKit (development)'
